--- a/src/components/SiteFooter.astro
+++ b/src/components/SiteFooter.astro
@@ -1,26 +1,16 @@
 ---
 ---
 
-<div class="container text-xs">
-    <div class="flex items-center h-10">
-        <div class="space-x-8">
-            &copy;{" "}
-            <a href="https://tools.quake.world" class="font-bold">
-                QuakeWorld Tools
-            </a>
-            <span>
-            Created by{" "}
-            <a class="text-sky-600" href="https://vikpe.org">
-              vikpe
-            </a>{" "}
-            a.k.a. &quot;XantoM&quot;
-          </span>
-        </div>
-        <a
-            href="https://github.com/qw-tools"
-            class="text-sky-600 ml-auto"
-        >
-            Source on GitHub &#8599;
-        </a>
-    </div>
+<div class="container">
+  <div class="flex h-10 items-center justify-center text-xs space-x-2">
+    <span>
+      Created by
+      <a class="text-sky-600" href="https://vikpe.org">vikpe</a> a.k.a.
+      "XantoM&quot;
+    </span>
+    <span class="text-gray-400">|</span>
+    <a class="text-sky-600" href="https://github.com/qw-tools/charset">
+      Source on GitHub &#8599;
+    </a>
+  </div>
 </div>
