--- a/src/components/SiteFooter.astro
+++ b/src/components/SiteFooter.astro
@@ -9,7 +9,7 @@
       "XantoM&quot;
     </span>
     <span class="text-gray-400">|</span>
-    <a class="text-sky-600" href="https://github.com/qw-tools/charset">
+    <a class="text-sky-600" href="https://github.com/qw-tools">
       Source on GitHub &#8599;
     </a>
   </div>
