Add project icons.

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -3,12 +3,17 @@ export interface Props {
 title: string;
 body: string;
 href: string;
+icon: string;
 }
 
-const { href, title, body } = Astro.props;
+const { href, title, body, icon } = Astro.props;
 ---
 
 <a href={href} class="block px-6 py-5 md:rounded-md bg-white border border-gray-300 shadow hover:bg-sky-50">
-    <h2 class="text-lg font-bold mb-1">{title} <span>&rarr;</span></h2>
+    <h2 class="text-lg font-bold mb-1 flex items-center space-x-1">
+        <img src={`/assets/img/icons/${icon}.svg`} alt="" width="32" height="32" />
+        <span>{title}</span>
+        <span>&rarr;</span>
+    </h2>
     <div class="text-gray-700">{body}</div>
 </a>
