Add icon for resources.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,7 @@ const projectIcons = {
     "hud-numbers": "pin",
     "model-textures": "category",
     "charset": "font_download",
+    "resources": "format_list_bulleted",
 };
 
 ---
