Add simple items.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,6 +14,7 @@ const projectIcons = {
     "model-textures": "category",
     "charset": "font_download",
     "resources": "format_list_bulleted",
+    "simple-items": "category",
 };
 
 ---
